--- a/frame_to_video.ipynb
+++ b/frame_to_video.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "d89881ad-079e-4f16-9f92-3bccdaa9b1b9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "done!\n"
+     ]
+    }
+   ],
    "source": [
     "import cv2\n",
     "import os\n",
@@ -34,9 +42,8 @@
     "    cv2.destroyAllWindows()\n",
     "    video.release()\n",
     "\n",
-    "# 使用示例\n",
-    "create_video_from_images('', 'output_video.mp4', 30)\n",
-    "\n"
+    "create_video_from_images('', '00010_0001_0.mp4', 30)\n",
+    "print('done!')\n"
    ]
   },
   {
