--- a/process_up_data.ipynb
+++ b/process_up_data.ipynb
@@ -35,7 +35,7 @@
     "            clean_and_move_subdirectories(sub_dir_path)\n",
     "\n",
     "# 使用函数\n",
-    "frame_up_dir = ''  # 使用您的实际frame_up目录路径\n",
+    "frame_up_dir = ''  \n",
     "process_frame_up_directory(frame_up_dir)"
    ]
   },
@@ -54,7 +54,7 @@
     "            shutil.rmtree(restored_imgs_path)\n",
     "            print(f\"Deleted folder: {restored_imgs_path}\")\n",
     "# 使用函数\n",
-    "frame_up_dir = '/home/tides/dataup/GFPGAN/frame_up'  # 使用您的实际frame_up目录路径\n",
+    "frame_up_dir = '/home/tides/dataup/GFPGAN/frame_up' \n",
     "delete_restored_imgs(frame_up_dir)"
    ]
   }
