--- a/video_merge_display.ipynb
+++ b/video_merge_display.ipynb
@@ -50,19 +50,18 @@
     "    return latest_video\n",
     "\n",
     "\n",
-    "latest_video = find_latest_video(directory='')\n",
     "\n",
     "# video path\n",
     "video1_list = ['']\n",
     "video2_list = ['']\n",
-    "video3_list = [latest_video]\n",
+    "video3_list = ['']\n",
     "\n",
     "video_list = [video1_list, video2_list, video3_list]\n",
     "print(f\"video_list:{video_list}\")\n",
     "\n",
     "# ImageFont should download  \n",
-    "font = ImageFont.truetype(\"Montserrat-Black.otf\", size=45)    \n",
-    "text_map = {'0':'title 1','1':'title 2','2':'title 3'}\n",
+    "font = ImageFont.truetype(\"\", size=45)    \n",
+    "text_map = {'0':'','1':'','2':''}\n",
     "    \n",
     "for i in range(len(video_list[0])):\n",
     "    all_frames = []\n",
@@ -121,9 +120,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "faceswap",
+   "display_name": "benchmark",
    "language": "python",
-   "name": "faceswap"
+   "name": "benchmark"
   },
   "language_info": {
    "codemirror_mode": {
